# DistributedRPC

./: CMakeLists.txt  README.md  autobuild.sh
example/: user.pb.cc  user.pb.h  user.proto
example/callee/: CMakeLists.txt  userservice.cc
example/caller/: CMakeLists.txt  calluservice.cc
include/: log.h  rpcApplication.h  rpcChannel.h  rpcConfig.h  rpcController.h  rpcHeader.pb.h  rpcProvider.h  safeQueue.h  zookeeperUtil.h
src/: CMakeLists.txt  log.cc  rpcApplication.cc  rpcChannel.cc  rpcConfig.cc  rpcContorller.cc  rpcHeader.pb.cc  rpcHeader.proto  rpcProvider.cc  zookeeperUtil.cc
test/protobuf/: main.cc  test.pb.cc  test.pb.h  test.proto
